<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Leet Code Solutions</string>
    <string name="add_two_numbers_code">
<![CDATA[
<!DOCTYPE html>
<p>&#160; &#160; fun addTwoNumbers(l1: ListNode?, l2: ListNode?): ListNode? {</p>
<p>&#160; &#160; &#160; &#160; if (l1 == null &amp;&amp; l2 == null)</p>
<p>&#160; &#160; &#160; &#160; &#160; &#160; return null</p>
<p>&#160; &#160; &#160; &#160; var sum = 0</p>
<p>&#160; &#160; &#160; &#160; l1?.let { sum += l1.`val` }</p>
<p>&#160; &#160; &#160; &#160; l2?.let { sum += l2.`val` }</p>
<p>&#160; &#160; &#160; &#160; val result = ListNode(sum % 10)</p>
<p>&#160; &#160; &#160; &#160; result.next = addTwoNumbers(l1?.next, l2?.next)</p>
<p>&#160; &#160; &#160; &#160; if (sum / 10 &gt;= 1)</p>
<p>&#160; &#160; &#160; &#160; &#160; &#160; result.next = addTwoNumbers(result.next, ListNode(1))</p>
<p>&#160; &#160; &#160; &#160; return result</p>
<p>&#160; &#160; }</p>
]]>
    </string>
    <string name="add_two_numbers_description">
        You are given two non-empty linked lists representing two non-negative integers. The digits are stored in reverse order, and each of their nodes contains a single digit. Add the two numbers and return the sum as a linked list.
        \n\nYou may assume the two numbers do not contain any leading zero, except the number 0 itself.
    </string>
    <string name="common_height_x">height = %s</string>
    <string name="common_input_x">Input:\n%s</string>
    <string name="common_l1_x">l1 = %s</string>
    <string name="common_l2_x">l2 = %s</string>
    <string name="common_num_rows_x">numRows = %s</string>
    <string name="common_num_x">num = %s</string>
    <string name="common_numbers_x">numbers = %s</string>
    <string name="common_numbers1_x" tools:ignore="Typos">numbers1 = %s</string>
    <string name="common_numbers2_x">numbers2 = %s</string>
    <string name="common_output_x">Output:\n%s</string>
    <string name="common_p_x">p = %s</string>
    <string name="common_run">Run</string>
    <string name="common_s_x">s = %s</string>
    <string name="common_target_x">target = %s</string>
    <string name="common_x_x">x = %s</string>
    <string name="container_with_most_water_code" tools:ignore="TypographyDashes">
        <![CDATA[
        <!DOCTYPE html>
        <p>&nbsp; &nbsp; fun maxArea(height: IntArray): Int {</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; var area = 0</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; var left = 0</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; var right = height.size - 1</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; while (right &gt; left) {</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; area = kotlin.math.max(</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; area,</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; kotlin.math.min(height[left], height[right]) * (right - left)</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; )</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; if (height[left] &lt; height[right])</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; left++</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; else</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; right--</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; }</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; return area</p>
        <p>&nbsp; &nbsp; }</p>
        ]]>
    </string>
    <string name="container_with_most_water_description">
        You are given an integer array height of length n. There are n vertical lines drawn such that the two endpoints of the ith line are (i, 0) and (i, height[i]).
        \n\nFind two lines that together with the x-axis form a container, such that the container contains the most water.
        \n\nReturn the maximum amount of water a container can store.
        \n\nNotice that you may not slant the container.
    </string>
    <string name="integer_to_roman_code">
        <![CDATA[
        <!DOCTYPE html>
        <p>&nbsp; &nbsp; fun intToRoman(num: Int): String {</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; val strArray =</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; arrayOf(&quot;M&quot;, &quot;CM&quot;, &quot;D&quot;, &quot;CD&quot;, &quot;C&quot;, &quot;XC&quot;, &quot;L&quot;, &quot;XL&quot;, &quot;X&quot;, &quot;IX&quot;, &quot;V&quot;, &quot;IV&quot;, &quot;I&quot;)</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; val valueArray = arrayOf(1000, 900, 500, 400, 100, 90, 50, 40, 10, 9, 5, 4, 1)</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; val sb = StringBuilder()</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; var tempNum = num</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; valueArray.forEachIndexed { index, value -&gt;</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; val n = tempNum / value</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; repeat(n) {</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; sb.append(strArray[index])</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; }</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; tempNum %= value</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; }</p>
        <p>&nbsp; &nbsp; &nbsp; &nbsp; return sb.toString()</p>
        <p>&nbsp; &nbsp; }</p>
        ]]>
    </string>
    <string name="integer_to_roman_description">
        Roman numerals are represented by seven different symbols: I, V, X, L, C, D and M.
        \n\nSymbol       Value
        \nI             1
        \nV             5
        \nX             10
        \nL             50
        \nC             100
        \nD             500
        \nM             1000
        \nFor example, 2 is written as II in Roman numeral, just two one\'s added together. 12 is written as XII, which is simply X + II. The number 27 is written as XXVII, which is XX + V + II.
        \n\nRoman numerals are usually written largest to smallest from left to right. However, the numeral for four is not IIII. Instead, the number four is written as IV. Because the one is before the five we subtract it making four. The same principle applies to the number nine, which is written as IX. There are six instances where subtraction is used:
        \n\nI can be placed before V (5) and X (10) to make 4 and 9.
        \nX can be placed before L (50) and C (100) to make 40 and 90.
        \nC can be placed before D (500) and M (1000) to make 400 and 900.
        \nGiven an integer, convert it to a roman numeral.
    </string>
    <string name="longest_palindromic_substring_code">
<![CDATA[
<!DOCTYPE html>
<p>&nbsp; &nbsp; fun longestPalindrome(s: String): String {</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; val fillChar = &apos;_&apos;</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; val filledStr = StringBuilder(s.length * 2 + 1).apply {</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; for (i in s.indices)</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; append(fillChar).append(s[i])</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; append(fillChar)</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; }</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; val radiusArray = Array(filledStr.length) { 0 }</p>
<p><br></p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; var center = 0</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; var maxCenter = 0</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; var maxRadius = 0</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; var radius = 0</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; while (center &lt; filledStr.length) {</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; var nextRadius = radius + 1</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; while (center - nextRadius &gt;= 0</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &amp;&amp; center + nextRadius &lt; filledStr.length</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &amp;&amp; filledStr[center + nextRadius] == filledStr[center - nextRadius]</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ) {</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; radius = nextRadius</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; nextRadius++</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; }</p>
<p><br></p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; radiusArray[center] = radius</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; if (radiusArray[center] &gt; maxRadius) {</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; maxCenter = center</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; maxRadius = radiusArray[center]</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; }</p>
<p><br></p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; val middleCenter = center</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; val rightBound = center + radius</p>
<p><br></p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; center++</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; radius = 0</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; while (center &lt;= rightBound) {</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; val leftCenter = middleCenter - (center - middleCenter)</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; val reach = center + radiusArray[leftCenter]</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; if (reach &lt; rightBound)</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; radiusArray[center] = radiusArray[leftCenter]</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; else if (reach &gt; rightBound)</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; radiusArray[center] = rightBound - center</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; else {</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; radius = rightBound - center</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; break</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; }</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; center++</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; }</p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; }</p>
<p><br></p>
<p>&nbsp; &nbsp; &nbsp; &nbsp; return filledStr.substring(maxCenter - maxRadius, maxCenter + maxRadius).filter { it != fillChar }</p>
<p>&nbsp; &nbsp; }</p>
]]>
    </string>
    <string name="longest_palindromic_substring_description">
        Given a string s, return the longest palindromic substring in s.
    </string>
    <string name="two_sum_code">
<![CDATA[
<!DOCTYPE html>
<p>&#160; &#160; fun twoSum(numbers: IntArray, target: Int): IntArray {</p>
<p>&#160; &#160; &#160; &#160; val map = HashMap&lt;Int, Int&gt;()</p>
<p>&#160; &#160; &#160; &#160; numbers.forEachIndexed{</p>
<p>&#160; &#160; &#160; &#160; &#160; &#160; index, num -&gt;</p>
<p>&#160; &#160; &#160; &#160; &#160; &#160; map[target - num]?. let {</p>
<p>&#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; return intArrayOf(index, it)</p>
<p>&#160; &#160; &#160; &#160; &#160; &#160; }</p>
<p>&#160; &#160; &#160; &#160; &#160; &#160; map[num] = index</p>
<p>&#160; &#160; &#160; &#160; }</p>
<p>&#160; &#160; &#160; &#160; throw IllegalStateException(&quot;No solution!&quot;)</p>
<p>&#160; &#160; }</p>
]]>
    </string>
    <string name="two_sum_description">
        Given an array of integers numbers and an integer target, return indices of the two numbers such that they add up to target.
        \n\nYou may assume that each input would have exactly one solution, and you may not use the same element twice.
        \n\nYou can return the answer in any order.
    </string>
</resources>